--- a/lib/streamaze_web/templates/layout/root.html.heex
+++ b/lib/streamaze_web/templates/layout/root.html.heex
@@ -11,11 +11,14 @@
   </head>
   <body class="h-screen px-6 max-w-4xl mx-auto bg-gray-900 text-white">
     <header>
-      <div class="py-6 justify-between flex">
+      <div class="py-6 justify-between flex items-center">
         <span>
-          Signed in as Zane
+          <%= link "Streamaze", to: Routes.page_path(@conn, :index), class: "text-2xl font-bold text-white" %>
         </span>
         <div class="gap-4 flex flex-row">
+          <span>
+            Signed in as Zane
+          </span>
           <span>
             <%= link "My profile", to: "#" %>
           </span>
