--- a/lib/streamaze_web/templates/page/index.html.heex
+++ b/lib/streamaze_web/templates/page/index.html.heex
@@ -21,7 +21,7 @@
         <%= link "Invite Managers", to: "#" %>
       </li>
       <li>
-        <%= link "My Dashboard", to: "#" %>
+        <%= link "My Dashboard", to: Routes.dashboard_path(@conn, :index) %>
       </li>
       <li>
         <%= link "All Streamers", to: Routes.streamer_index_path(@conn, :index) %>
