--- a/lib/streamaze_web/templates/dashboard/index.html.heex
+++ b/lib/streamaze_web/templates/dashboard/index.html.heex
@@ -1,11 +1,11 @@
 <h1>My Dashboard</h1>
 
 <section>
-    <select>
+    <%!-- <select>
         <%= for streamer <- @streamers do %>
             <option value={streamer.id}>
                 <%= streamer.name %>
             </option>
         <% end %>
-    </select>
+    </select> --%>
 </section>
