Make sign-in, sign-up labels white

--- a/lib/streamaze_web/templates/user_registration/new.html.heex
+++ b/lib/streamaze_web/templates/user_registration/new.html.heex
@@ -7,11 +7,11 @@
     </div>
   <% end %>
 
-  <%= label f, :email %>
+  <%= label f, :email, class: "text-white" %>
   <%= email_input f, :email, required: true %>
   <%= error_tag f, :email %>
 
-  <%= label f, :password %>
+  <%= label f, :password, class: "text-white" %>
   <%= password_input f, :password, required: true %>
   <%= error_tag f, :password %>
 
