--- a/lib/streamaze_web/templates/user_session/new.html.heex
+++ b/lib/streamaze_web/templates/user_session/new.html.heex
@@ -7,14 +7,16 @@
     </div>
   <% end %>
 
-  <%= label f, :email %>
+  <%= label f, :email, class: "text-white" %>
   <%= email_input f, :email, required: true %>
 
-  <%= label f, :password %>
+  <%= label f, :password, class: "text-white" %>
   <%= password_input f, :password, required: true %>
 
-  <%= label f, :remember_me, "Keep me logged in for 60 days" %>
-  <%= checkbox f, :remember_me %>
+  <div class="flex gap-4">
+    <%= checkbox f, :remember_me %>
+    <%= label f, :remember_me, "Keep me logged in for 60 days", class: "text-white" %>
+  </div>
 
   <div>
     <%= submit "Log in" %>
