--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -48,6 +48,10 @@
     button[type="submit"] {
         @apply bg-blue-500 text-white font-bold py-2 px-4 rounded my-2;
     }
+
+    select {
+        @apply border border-gray-300 rounded-md shadow-sm py-2 bg-white text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm;
+    }
 }
 
 /* Alerts and form errors used by phx.new */
