--- a/lib/streamaze_web/templates/layout/dashboard.html.heex
+++ b/lib/streamaze_web/templates/layout/dashboard.html.heex
@@ -2,11 +2,16 @@
 
 <section>
     <select phx-change="select_streamer">
+        <option>
+            Select a streamer...
+        </option>
         <%= for streamer <- @managed_streamers do %>
             <option value={streamer.id} selected={if @selected_streamer_id == streamer.id, do: "selected"}>
                 <%= streamer.name %>
             </option>
         <% end %>
     </select>
-    <%= @inner_content %>
+    <%= if @selected_streamer do %>
+        <%= @inner_content %>
+    <% end %>
 </section>
