--- a/lib/streamaze_web/templates/page/index.html.heex
+++ b/lib/streamaze_web/templates/page/index.html.heex
@@ -1,6 +1,6 @@
 <section class="text-center my-8">
   <h1 class="text-3xl font-bold leading-snug"><%= gettext "Welcome to %{name}", name: "Streamaze" %></h1>
-  <p class="text-lg">Streaming tools for professionals</p>
+  <p class="text-lg">Streaming tools for the best</p>
 </section>
 
 <div class="flex flex-col gap-3">
