--- a/lib/streamaze_web/templates/page/index.html.heex
+++ b/lib/streamaze_web/templates/page/index.html.heex
@@ -6,13 +6,17 @@
 <div class="flex flex-col gap-3">
   <section>
     <h2>Active Streams</h2>
-    <ul class="flex flex-col gap-3">
-      <%= for stream <- @live_list do %>
-        <li>
-          <%= stream.streamer.name %> <%= link "(YouTube)", to: stream.streamer.youtube_url, target: "_blank" %>
-        </li>
-      <% end %>
-    </ul>
+    <%= if length(@live_list) == 0 do %>
+      <p class="text-gray-400">No streams are currently live</p>
+    <% else %>
+      <ul class="flex flex-col gap-3">
+        <%= for stream <- @live_list do %>
+          <li>
+            <%= stream.streamer.name %> <%= link "(YouTube)", to: stream.streamer.youtube_url, target: "_blank" %>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
   </section>
   <section>
     <h2>Quick Links</h2>
