--- a/lib/streamaze_web/live/expense_live/form_component.html.heex
+++ b/lib/streamaze_web/live/expense_live/form_component.html.heex
@@ -16,6 +16,10 @@
     <%= label f, :currency %>
     <%= text_input f, :currency %>
     <%= error_tag f, :currency %>
+
+    <%= label f, :streamer_id %>
+    <%= select f, :streamer_id, @streamers, value: :id, label: :name %>
+    <%= error_tag f, :streamer_id %>
   
     <div>
       <%= submit "Save", phx_disable_with: "Saving..." %>
