Select streamer dropdown in Dashboard

--- a/lib/streamaze_web/templates/page/index.html.heex
+++ b/lib/streamaze_web/templates/page/index.html.heex
@@ -25,7 +25,7 @@
         <%= link "Invite Managers", to: "#" %>
       </li>
       <li>
-        <%= link "My Dashboard", to: Routes.dashboard_index_path(@conn, :index) %>
+        <%= link "Manager Dashboard", to: Routes.dashboard_index_path(@conn, :index) %>
       </li>
       <li>
         <%= link "All Streamers", to: Routes.streamer_index_path(@conn, :index) %>
