--- a/lib/streamaze_web/live/dashboard_live/index.html.heex
+++ b/lib/streamaze_web/live/dashboard_live/index.html.heex
@@ -1,78 +1,22 @@
+<h1>My Dashboard</h1>
+
+<section>
+    <.form let={f} for={@form} phx-change="update_selected_streamer">
+        <%= if length(@managed_streamers) > 0 do %>
+            <%= select f, :selected_streamer_id, Enum.map(@managed_streamers, & {&1.name, &1.id}), prompt: "Select a streamer..." %>
+        <% else %>
+            <%= select f, :selected_streamer_id, [], prompt: "You are not managing any streamers", disabled: true %>
+        <% end %>
+    </.form>
+</section>
+
 <section class="mt-8">
-    <h2>Details</h2>
+    <%= if @selected_streamer do %>
+        <h2>Details</h2>
+        <p><b>Net profit:</b> $<%= :erlang.float_to_binary(@net_profit, [decimals: 2]) %></p>
 
-    <h4>Active Streams for <%= @selected_streamer.name %> <%= link "(YouTube)", to: @selected_streamer.youtube_url, target: "_blank" %></h4>
+        <h4>Active Streams for <%= @selected_streamer.name %> <%= link "(YouTube)", to: @selected_streamer.youtube_url, target: "_blank" %></h4>
 
-    <div class="rounded-md border border-gray-700">
-        <table class="table-auto w-full">
-            <thead>
-                <tr>
-                    <th>Start Time</th>
-                    <th>Subathon</th>
-                    <th>Minutes per Dollar</th>
-                </tr>
-            </thead>
-            <tbody class="bg-gray-800">
-                <%= for stream <- @live_streams do %>
-                    <tr>
-                        <td><%= stream.inserted_at %></td>
-                        <td><%= if stream.is_subathon, do: "✓" %></td>
-                        <td><%= stream.subathon_minutes_per_dollar %></td>
-                    </tr>
-                <% end %>
-            </tbody>
-        </table>
-        <p class="text-right py-4 px-8">View all</p>
-    </div>
-
-    <h2>Latest Expenses</h2>
-    <div class="rounded-md border border-gray-700">
-        <table class="table-auto w-full">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Amount</th>
-                </tr>
-            </thead>
-            <tbody class="bg-gray-800">
-                <%= for expense <- @streamer_expenses do %>
-                    <tr>
-                        <td><%= expense.inserted_at %></td>
-                        <td><%= :erlang.float_to_binary(expense.amount, [decimals: 2]) %> <%= expense.currency %></td>
-                    </tr>
-                <% end %>
-            </tbody>
-        </table>
-        <p class="text-right py-4 px-8">View all</p>
-    </div>
-
-    <h2>Latest Donations</h2>
-    <div class="rounded-md border border-gray-700">
-        <table class="table-auto w-full">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Amount</th>
-                    <th>Donor</th>
-                    <th>Message</th>
-                </tr>
-            </thead>
-            <tbody class="bg-gray-800">
-                <%= for donation <- @latest_donations do %>
-                    <tr>
-                        <td><%= donation.inserted_at %></td>
-                        <td><%= :erlang.float_to_binary(donation.amount, [decimals: 2]) %> <%= donation.currency %></td>
-                        <td><%= donation.sender %></td>
-                        <td><%= donation.message %></td>
-                    </tr>
-                <% end %>
-            </tbody>
-        </table>
-        <p class="text-right py-4 px-8">View all</p>
-    </div>
-
-    <%= if length(@latest_inactive_streams) > 0 do %>
-        <h2>Past Streams</h2>
         <div class="rounded-md border border-gray-700">
             <table class="table-auto w-full">
                 <thead>
@@ -83,7 +27,7 @@
                     </tr>
                 </thead>
                 <tbody class="bg-gray-800">
-                    <%= for stream <- @latest_inactive_streams do %>
+                    <%= for stream <- @live_streams do %>
                         <tr>
                             <td><%= stream.inserted_at %></td>
                             <td><%= if stream.is_subathon, do: "✓" %></td>
@@ -94,5 +38,76 @@
             </table>
             <p class="text-right py-4 px-8">View all</p>
         </div>
+
+        <h2>Latest Expenses</h2>
+        <div class="rounded-md border border-gray-700">
+            <table class="table-auto w-full">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Amount</th>
+                    </tr>
+                </thead>
+                <tbody class="bg-gray-800">
+                    <%= for expense <- @streamer_expenses do %>
+                        <tr>
+                            <td><%= expense.inserted_at %></td>
+                            <td><%= :erlang.float_to_binary(expense.amount, [decimals: 2]) %> <%= expense.currency %></td>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
+            <p class="text-right py-4 px-8">View all</p>
+        </div>
+
+        <h2>Latest Donations</h2>
+        <div class="rounded-md border border-gray-700">
+            <table class="table-auto w-full">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Amount</th>
+                        <th>Donor</th>
+                        <th>Message</th>
+                    </tr>
+                </thead>
+                <tbody class="bg-gray-800">
+                    <%= for donation <- @latest_donations do %>
+                        <tr>
+                            <td><%= donation.inserted_at %></td>
+                            <td><%= :erlang.float_to_binary(donation.amount, [decimals: 2]) %> <%= donation.currency %></td>
+                            <td><%= donation.sender %></td>
+                            <td><%= donation.message %></td>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
+            <p class="text-right py-4 px-8">View all</p>
+        </div>
+
+        <%= if length(@latest_inactive_streams) > 0 do %>
+            <h2>Past Streams</h2>
+            <div class="rounded-md border border-gray-700">
+                <table class="table-auto w-full">
+                    <thead>
+                        <tr>
+                            <th>Start Time</th>
+                            <th>Subathon</th>
+                            <th>Minutes per Dollar</th>
+                        </tr>
+                    </thead>
+                    <tbody class="bg-gray-800">
+                        <%= for stream <- @latest_inactive_streams do %>
+                            <tr>
+                                <td><%= stream.inserted_at %></td>
+                                <td><%= if stream.is_subathon, do: "✓" %></td>
+                                <td><%= stream.subathon_minutes_per_dollar %></td>
+                            </tr>
+                        <% end %>
+                    </tbody>
+                </table>
+                <p class="text-right py-4 px-8">View all</p>
+            </div>
+        <% end %>
     <% end %>
 </section>
