Use limit: 10 for donations/expenses on Dashboard

--- a/lib/streamaze_web/live/dashboard_live/index.html.heex
+++ b/lib/streamaze_web/live/dashboard_live/index.html.heex
@@ -39,7 +39,7 @@
             <p class="text-right py-4 px-8">View all</p>
         </div>
 
-        <h2>Latest Expenses</h2>
+        <h2>Last 10 Expenses</h2>
         <div class="rounded-md border border-gray-700">
             <table class="table-auto w-full">
                 <thead>
@@ -60,7 +60,7 @@
             <p class="text-right py-4 px-8">View all</p>
         </div>
 
-        <h2>Latest Donations</h2>
+        <h2>Last 10 Donations</h2>
         <div class="rounded-md border border-gray-700">
             <table class="table-auto w-full">
                 <thead>
