--- a/lib/streamaze_web/live/dashboard_live/index.html.heex
+++ b/lib/streamaze_web/live/dashboard_live/index.html.heex
@@ -12,7 +12,7 @@
 
 <section class="mt-8">
     <%= if @selected_streamer do %>
-        <h2>Details</h2>
+        <h2>Overview</h2>
         <ul>
             <li>
                 <b>Net profit:</b> <%= :erlang.float_to_binary(@net_profit, [decimals: 2]) %> USD
@@ -23,9 +23,12 @@
             <li>
                 <b>Total expenses:</b> <%= :erlang.float_to_binary(@total_expenses, [decimals: 2]) %> USD
             </li>
+            <li>
+                <b>YouTube Channel:</b> <%= link @selected_streamer.youtube_url, to: @selected_streamer.youtube_url, target: "_blank" %>
+            </li>
         </ul>
 
-        <h2>Active Streams for <%= @selected_streamer.name %> <%= link "(YouTube)", to: @selected_streamer.youtube_url, target: "_blank" %></h2>
+        <h2>Active Streams for <%= @selected_streamer.name %></h2>
 
         <div class="rounded-md border border-gray-700">
             <table class="table-auto w-full">
