Move Invite code to user settings page

--- a/lib/streamaze_web/templates/layout/root.html.heex
+++ b/lib/streamaze_web/templates/layout/root.html.heex
@@ -23,7 +23,7 @@
               </span>
               <div>
                 <span>
-                  <%= link "My profile", to: Routes.profile_index_path(@conn, :index) %>
+                  <%= link "My account", to: Routes.user_settings_path(@conn, :edit) %>
                 </span>
                 ·
                 <span>
