--- a/lib/streamaze_web/templates/user_settings/edit.html.heex
+++ b/lib/streamaze_web/templates/user_settings/edit.html.heex
@@ -1,4 +1,17 @@
-<h1>Settings</h1>
+<h1>My Account</h1>
+
+<p>Here you can view and edit and view your profile.</p>
+
+<br />
+
+<h3>Invite code</h3>
+
+<.form let={f} for={@form}>
+    <%= label f, "My invite code", class: "text-white" %>
+    <%= text_input f, "my_invite_code", disabled: true %>
+</.form>
+
+<br />
 
 <h3>Change email</h3>
 
@@ -11,11 +24,11 @@
 
   <%= hidden_input f, :action, name: "action", value: "update_email" %>
 
-  <%= label f, :email %>
+  <%= label f, :email, class: "text-white" %>
   <%= email_input f, :email, required: true %>
   <%= error_tag f, :email %>
 
-  <%= label f, :current_password, for: "current_password_for_email" %>
+  <%= label f, :current_password, for: "current_password_for_email", class: "text-white" %>
   <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email" %>
   <%= error_tag f, :current_password %>
 
@@ -23,6 +36,8 @@
     <%= submit "Change email" %>
   </div>
 </.form>
+
+<br />
 
 <h3>Change password</h3>
 
@@ -35,15 +50,15 @@
 
   <%= hidden_input f, :action, name: "action", value: "update_password" %>
 
-  <%= label f, :password, "New password" %>
+  <%= label f, :password, "New password", class: "text-white" %>
   <%= password_input f, :password, required: true %>
   <%= error_tag f, :password %>
 
-  <%= label f, :password_confirmation, "Confirm new password" %>
+  <%= label f, :password_confirmation, "Confirm new password", class: "text-white" %>
   <%= password_input f, :password_confirmation, required: true %>
   <%= error_tag f, :password_confirmation %>
 
-  <%= label f, :current_password, for: "current_password_for_password" %>
+  <%= label f, :current_password, for: "current_password_for_password", class: "text-white" %>
   <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_password" %>
   <%= error_tag f, :current_password %>
 
