Create tables for subs + customers + Webhook

--- a/lib/streamaze_web/templates/page/index.html.heex
+++ b/lib/streamaze_web/templates/page/index.html.heex
@@ -33,6 +33,9 @@
       <li>
         <%= link "Streamaze Discord", to: "https://discord.gg/c3RetD5r5Y", target: "_blank" %>
       </li>
+      <li>
+        <%= link "Payments & Subscriptions", to: Routes.payment_path(@conn, :index) %>
+      </li>
     </ul>
   </section>
 </div>
